python_deps_ok
  File "<string>", line 1
    import jsonschema, numpy, cv2, PySide6; print( 
                                                 ^
SyntaxError: '(' was never closed
